--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "friendsofsymfony/rest-bundle": "^3.7",
+        "jms/serializer-bundle": "^5.4",
+        "lexik/jwt-authentication-bundle": "^3.0",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
