--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.59",
         "symfony/runtime": "6.4.*",
+        "symfony/validator": "6.4.*",
         "symfony/yaml": "6.4.*"
     },
     "config": {
